--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -73,6 +73,10 @@
     transition: ease-out 0.4s;
 }
 
+.nav_styledNav .nav_home span p {
+    padding-left: 5px;
+}
+
 .nav_styledNav a {
     text-decoration: none;
     color: var(--main_text_color);
